[package]
name = "libcli-rs"
version = "0.1.4"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2021"
description = "libcli-rs, a common library for CLI development"
keywords = ["cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/ecatlabs/libcli-rs"
repository = "https://github.com/ecatlabs/libcli-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0"
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9.19"
prettytable-rs = "0.10.0"
Inflector = "0.11"
chrono = "0.4"
regex = "1.4"
maplit = "1.0"
indicatif = "0.17.3"
